             (+) move systemd-udevd to separate module udev;
             (+) remove systemd-gpt-auto-generator program;
             (+) remove systemd-efi-boot-generator program;
        * tests:
             (+) move test-udev to separate module udev;
             (+) move test-libudev to separate module udev;
             (+) remove rules-test.sh;
        * units:
             (+) add sysctl service;
             (+) remove systemd-sysctl service;
             (+) remove systemd-networkd-wait-online service;
             (+) remove systemd-networkd service;
             (+) remove systemd-resolved service;
             (+) remove systemd-timesyncd service;
             (+) remove systemd-timedated service;
             (+) remove systemd-hostnamed service;
             (+) remove systemd-machined service;
             (+) remove systemd-nspawn@ service;
             (+) remove systemd-localed service;
             (+) remove systemd-vconsole-setup service;
             (+) move systemd-udev-settle service to separate module udev;
             (+) move systemd-udev-trigger service to separate module udev;
             (+) move systemd-udevd service to separate module udev;
        * other:
             (+) remove ACL support;
             (+) remove udev firmware loading support;
             (+) remove rule-syntax-check.py test util;

CHANGES WITH 214:

      (+) As an experimental feature, udev now tries to lock the
          disk device node (flock(LOCK_SH|LOCK_NB)) while it
          executes events for the disk or any of its partitions.
          Applications like partitioning programs can lock the
          disk device node (flock(LOCK_EX)) and claim temporary
          device ownership that way; udev will entirely skip all event
          handling for this disk and its partitions. If the disk
          was opened for writing, the close will trigger a partition
          table rescan in udev's "watch" facility, and if needed