@@ -4520,31 +4520,16 @@ test-libsystemd-sym.c: \
 		src/systemd/sd-resolve.h
 	$(generate-sym-test)
 
-test-libudev-sym.c: \
-		src/libudev/libudev.sym \
-		src/udev/udev.h
-	$(generate-sym-test)
-
 test_libsystemd_sym_SOURCES = \
 	test-libsystemd-sym.c
 test_libsystemd_sym_LDADD = \
 	libsystemd.la
 
-test_libudev_sym_SOURCES = \
-	test-libudev-sym.c
-test_libudev_sym_CFLAGS = \
-	$(AM_CFLAGS) \
-	-Wno-deprecated-declarations
-test_libudev_sym_LDADD = \
-	libudev.la
-
 BUILT_SOURCES += \
-	$(test_libsystemd_sym_SOURCES) \
-	$(test_libudev_sym_SOURCES)
+	$(test_libsystemd_sym_SOURCES)
 
 tests += \
-	test-libsystemd-sym \
-	test-libudev-sym
+	test-libsystemd-sym
 
 .PHONY: cppcheck
 cppcheck:
